# nonosolver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  display.cpp  display.h  main.cpp  nonofile.cpp  nonofile.h  nonogram.cpp  nonogram.h  penguin.ngm  raster.cpp  raster.h  solver.cpp  solver.h  test.ngm
